cmake_minimum_required(VERSION 3.10)
project(imagefun)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED True)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp)

add_executable(imagefun ${SOURCES})
target_include_directories(imagefun PUBLIC deps)
target_compile_definitions(imagefun PUBLIC WORKING_DIRECTORY="${PROJECT_SOURCE_DIR}/")